# nectar-tools

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  AUTHORS.rst  CLAUDE.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  _typos.toml  delete-tenant.py  policy_yaml_to_hiera.py  pretty_tox.sh  project.config  requirements.txt  rules.pl  run_tests.sh  setup.cfg  setup.py  sync_nova_gnocchi.py  test-requirements.txt  tox.ini
announce/: base.tmpl  example.tmpl  heartbleed.py  mailer.py  outage.py  sa-node.tmpl  users.csv
announce/templates/: base.tmpl  example.tmpl  heartbleed.html.tmpl  heartbleed.tmpl  outage-notification-hostdown.html.tmpl  outage-notification-hostdown.tmpl  outage-notification.html.tmpl  outage-notification.tmpl
autotest/: cleanup.py  config.ini  config_data.py  logger.py  nectar-test  novaaction.py  options.py  runTest1.py  runTest2.py  run_test.py  runsnapshot.py  runtestinstances.py  util.py  write_to_csv.py
debian/: changelog  control  copyright  python-nectar-tools.dirs  python-nectar-tools.install  rules  tools.ini
debugging/: amqp_dump.py
deployment/: cleanse-test-puppet.sh
docs/: conf.py  index.rst  installation.rst  usage.rst
etc/: example.conf  nectar-project-expiry.ini  slack-config-example.ini
infra_usage/: graphite.py  graphite_gaps.py  nectar_usage_report.py  nova_connection.py  process_report.py  report.ini  report_all_template.html  report_options.py  report_template.html  run_main.py  util_keystone.py  util_nova.py  util_report.py
nectar_tools/: auth.py  cmd_base.py  config.py  exceptions.py  image_test.py  log.py  notifier.py  sentry.py  test.py  utils.py
nectar_tools/allocation_expiry/: archiver.py  expirer.py  main.py
nectar_tools/allocations/: __init__.py  exceptions.py  manager.py  objects.py  states.py
nectar_tools/audit/: base.py  common.py
nectar_tools/cli/: magnum_upgrades.py  resource_capacity.py  send_fd_outbound.py  trove_datastore_upgrades.py  warre_host_flavors.py  warre_maintenance.py
nectar_tools/cmd/: send_fd_outbound.py
nectar_tools/common/: service_units.py
nectar_tools/expiry/: allocation_states.py  archiver.py  common.py  exceptions.py  expirer.py  expiry_states.py  main.py  notifier.py
scripts/: auth.py  backup_vm.py  bdm_audit.py  check_pa_pu.sh  clean_transient_queues.sh  cloudkitty_dashboard.py  create-project.py  create_magnum_templates.py  delete-tenant.py  diffini.py  get_agg.py  get_host.py  glance-audit.py  known_hosts.py  launch-hpc-cluster.py  list-members.py  nova_train_default.conf  outage-mailout.py  print_volume.py  swift-stats.py  swift_check_quarantined.py  update-expiry.conf  update-expiry.py  update-project.py  update-server-accessip.py  update-stats.py  update-status.py  update_expiry.py  usage-byuniversities.sh  virtguests
scripts/git/: README  (+6 more)
suspend_restore_vm/: create_db.py  suspend_restore.py
tests/: test_update_expiry.py
(+237 files in other folders)
