[metadata]
name = nectar_tools
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = GPLv3+
summary = A collection of useful tools for operating the NeCTAR Research Cloud
description_file =
    README.rst
keywords = nectar_tools
home_page = https://github.com/NeCTAR-RC/nectar-tools
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages = nectar_tools
include_package_data = True

[entry_points]
console_scripts =
    nectar-allocation-audit = nectar_tools.audit.cmd.allocation:main
    nectar-allocation-expiry = nectar_tools.expiry.cmd.allocation_expirer:main
    nectar-allocation-instance-expiry = nectar_tools.expiry.cmd.allocation_instance_expirer:main
    nectar-allocation-provisioner = nectar_tools.provisioning.cmd.provision:main
    nectar-allocation-reset-quotas = nectar_tools.provisioning.cmd.reset_quotas:main
    nectar-app-audit = nectar_tools.audit.cmd.app_catalog:main
    nectar-compute-audit = nectar_tools.audit.cmd.compute:main
    nectar-database-audit = nectar_tools.audit.cmd.database:main
    nectar-dns-audit = nectar_tools.audit.cmd.dns:main
    nectar-identity-audit = nectar_tools.audit.cmd.identity:main
    nectar-image-expiry = nectar_tools.expiry.cmd.image_expirer:main
    nectar-account-expiry = nectar_tools.expiry.cmd.account_expirer:main
    nectar-image-audit = nectar_tools.audit.cmd.image:main
    nectar-network-audit = nectar_tools.audit.cmd.network:main
    nectar-metric-audit = nectar_tools.audit.cmd.metric:main
    nectar-placement-audit = nectar_tools.audit.cmd.placement:main
    nectar-coe-audit = nectar_tools.audit.cmd.coe:main
    nectar-loadbalancer-audit = nectar_tools.audit.cmd.loadbalancer:main
    nectar-project-allocation-audit = nectar_tools.audit.cmd.project:main
    nectar-pt-audit = nectar_tools.audit.cmd.pt:main
    nectar-pt-expiry = nectar_tools.expiry.cmd.pt_expirer:main
    nectar-rating-audit = nectar_tools.audit.cmd.rating:main
    nectar-su-reports = nectar_tools.reports.cmd.su_report:main
    resource-capacity = nectar_tools.cli.resource_capacity:main
    send-fd-outbound = nectar_tools.cli.send_fd_outbound:main
    nectar-trove-upgrade-notifier = nectar_tools.cli.trove_datastore_upgrades:main
    warre-maintenance = nectar_tools.cli.warre_maintenance:main
    warre-host-flavors = nectar_tools.cli.warre_host_flavors:main
